# temporalEmailManager

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  starter.py
temporalUtils/: worker.py  workflows.py
utils/: .env.example  emailUtils.py  shared.py
